--- a/Polyglot Pro/Resources/Localizable.xcstrings
+++ b/Polyglot Pro/Resources/Localizable.xcstrings
@@ -341,58 +341,58 @@
       }
     },
     "Are you sure you want to reset your progress?" : {
-  "extractionState" : "manual",
-  "localizations" : {
-    "de" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Sind Sie sicher, dass Sie Ihren Fortschritt zurücksetzen möchten?"
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sind Sie sicher, dass Sie Ihren Fortschritt zurücksetzen möchten?"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "¿Estás seguro de que quieres reiniciar tu progreso?"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Êtes-vous sûr de vouloir réinitialiser votre progression ?"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sei sicuro di voler reimpostare il tuo progresso?"
+          }
+        },
+        "pl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Czy na pewno chcesz zresetować swój postęp?"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tem certeza de que deseja redefinir seu progresso?"
+          }
+        },
+        "sv" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Är du säker på att du vill återställa din framsteg?"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ви впевнені, що хочете скинути свій прогрес?"
+          }
+        }
       }
     },
-    "es" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "¿Estás seguro de que quieres reiniciar tu progreso?"
-      }
-    },
-    "fr" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Êtes-vous sûr de vouloir réinitialiser votre progression ?"
-      }
-    },
-    "it" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Sei sicuro di voler reimpostare il tuo progresso?"
-      }
-    },
-    "pl" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Czy na pewno chcesz zresetować swój postęp?"
-      }
-    },
-    "pt-BR" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Tem certeza de que deseja redefinir seu progresso?"
-      }
-    },
-    "sv" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Är du säker på att du vill återställa din framsteg?"
-      }
-    },
-    "uk" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Ви впевнені, що хочете скинути свій прогрес?"
-      }
-    }
-  }
-},
     "Audio Settings" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -606,58 +606,58 @@
       }
     },
     "Cancel" : {
-  "extractionState" : "manual",
-  "localizations" : {
-    "de" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Abbrechen"
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Abbrechen"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Cancelar"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Annuler"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Annulla"
+          }
+        },
+        "pl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Anuluj"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Cancelar"
+          }
+        },
+        "sv" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Avbryt"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Скасувати"
+          }
+        }
       }
     },
-    "es" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Cancelar"
-      }
-    },
-    "fr" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Annuler"
-      }
-    },
-    "it" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Annulla"
-      }
-    },
-    "pl" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Anuluj"
-      }
-    },
-    "pt-BR" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Cancelar"
-      }
-    },
-    "sv" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Avbryt"
-      }
-    },
-    "uk" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Скасувати"
-      }
-    }
-  }
-},
     "Change verbs" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -1187,58 +1187,58 @@
       }
     },
     "Delete" : {
-  "extractionState" : "manual",
-  "localizations" : {
-    "de" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Löschen"
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Löschen"
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Eliminar"
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Supprimer"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Elimina"
+          }
+        },
+        "pl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Usuń"
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Excluir"
+          }
+        },
+        "sv" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ta bort"
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Видалити"
+          }
+        }
       }
     },
-    "es" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Eliminar"
-      }
-    },
-    "fr" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Supprimer"
-      }
-    },
-    "it" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Elimina"
-      }
-    },
-    "pl" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Usuń"
-      }
-    },
-    "pt-BR" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Excluir"
-      }
-    },
-    "sv" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Ta bort"
-      }
-    },
-    "uk" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Видалити"
-      }
-    }
-  }
-},
     "Descriptive adjectives" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -2454,55 +2454,55 @@
         }
       }
     },
-    "Main Menu" : {
+    "Menu" : {
       "extractionState" : "manual",
       "localizations" : {
         "de" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Hauptmenü"
+            "value" : "Menü"
           }
         },
         "es" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Menú Principal"
+            "value" : "Menú"
           }
         },
         "fr" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Menu Principal"
+            "value" : "Menu"
           }
         },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Menu Principale"
+            "value" : "Menu"
           }
         },
         "pl" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Menu Główne"
+            "value" : "Menu"
           }
         },
         "pt-BR" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Menu Principal"
+            "value" : "Menu"
           }
         },
         "sv" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Huvudmeny"
+            "value" : "Meny"
           }
         },
         "uk" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Головне Меню"
+            "value" : "Меню"
           }
         }
       }
@@ -3671,59 +3671,6 @@
         }
       }
     },
-    "Select language" : {
-      "extractionState" : "manual",
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Sprache wählen"
-          }
-        },
-        "es" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Elegir idioma"
-          }
-        },
-        "fr" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Choisir la langue"
-          }
-        },
-        "it" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Scegli lingua"
-          }
-        },
-        "pl" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Wybierz język"
-          }
-        },
-        "pt-BR" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Escolher idioma"
-          }
-        },
-        "sv" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Välj språk"
-          }
-        },
-        "uk" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Обрати мову"
-          }
-        }
-      }
-    },
     "Select primary language:" : {
       "localizations" : {
         "de" : {
@@ -4728,58 +4675,58 @@
       }
     },
     "This action cannot be undone." : {
-  "extractionState" : "manual",
-  "localizations" : {
-    "de" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Diese Aktion kann nicht rückgängig gemacht werden."
+      "extractionState" : "manual",
+      "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Diese Aktion kann nicht rückgängig gemacht werden."
+          }
+        },
+        "es" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Esta acción no se puede deshacer."
+          }
+        },
+        "fr" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Cette action ne peut pas être annulée."
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Questa azione non può essere annullata."
+          }
+        },
+        "pl" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Tej czynności nie można cofnąć."
+          }
+        },
+        "pt-BR" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Esta ação não pode ser desfeita."
+          }
+        },
+        "sv" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Den här åtgärden kan inte ångras."
+          }
+        },
+        "uk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Цю дію не можна скасувати."
+          }
+        }
       }
     },
-    "es" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Esta acción no se puede deshacer."
-      }
-    },
-    "fr" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Cette action ne peut pas être annulée."
-      }
-    },
-    "it" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Questa azione non può essere annullata."
-      }
-    },
-    "pl" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Tej czynności nie można cofnąć."
-      }
-    },
-    "pt-BR" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Esta ação não pode ser desfeita."
-      }
-    },
-    "sv" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Den här åtgärden kan inte ångras."
-      }
-    },
-    "uk" : {
-      "stringUnit" : {
-        "state" : "translated",
-        "value" : "Цю дію не можна скасувати."
-      }
-    }
-  }
-},
     "Time expressions" : {
       "extractionState" : "manual",
       "localizations" : {
